--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doingtodacha</title>
+    <title>Goingtodacha</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
     <div class="container">
         <div class="window">
@@ -23,10 +26,12 @@
                     <input type="text" id="cons">
                     <input type="text" id="output" disabled>
                 </div>
-                <button id="convert" disabled>Вычислить!</button>
+                <button type="button" id="convert">Вычислить!</button>
             </form>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
+    <!--<script src="js/script2.js" defer></script>-->
 </body>
+
 </html>
